graylog/k8s-manifest/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog
  labels:
    component: graylog
spec:
  clusterIP: None
  ports:
  - port: 1514
    targetPort: syslog-tcp
    name: syslog-tcp
    protocol: TCP
  - port: 1514
    targetPort: syslog-udp
    name: syslog-udp
    protocol: UDP
  - port: 12201
    targetPort: gelf-tcp
    name: gelf-tcp
    protocol: TCP
  - port: 12201
    targetPort: gelf-udp
    name: gelf-udp
    protocol: UDP
  - port: 13301
    targetPort: forwarder-data
    name: forwarder-data
    protocol: TCP
  - port: 13302
    targetPort: forwarder-config
    name: forwarder-config
    protocol: TCP
  selector:
    component: graylog
