graylog/k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-web
  namespace: graylog
  labels:
    component: graylog
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: http-port
    name: http-port
    protocol: TCP
  selector:
    component: graylog
